Deployed  with MkDocs version: 1.3.0

--- a/bom/index.html
+++ b/bom/index.html
@@ -6,9 +6,9 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         
         
-        <link rel="canonical" href="https://lotek.wildfirelaboratories.com/bom/">
+        <link rel="canonical" href="https://sov.wildfirelaboratories.com/bom/">
         <link rel="shortcut icon" href="../img/favicon.ico">
-        <title>Bom - LOTEK-DOCS-LSN</title>
+        <title>Bom - SOVEREIGN-DOCS-LSN</title>
         <link href="../css/bootstrap.min.css" rel="stylesheet">
         <link href="../css/font-awesome.min.css" rel="stylesheet">
         <link href="../css/base.css" rel="stylesheet">
@@ -24,7 +24,7 @@
     <body>
         <div class="navbar fixed-top navbar-expand-lg navbar-dark bg-primary">
             <div class="container">
-                <a class="navbar-brand" href="..">LOTEK-DOCS-LSN</a>
+                <a class="navbar-brand" href="..">SOVEREIGN-DOCS-LSN</a>
                 <!-- Expander button -->
                 <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbar-collapse">
                     <span class="navbar-toggler-icon"></span>
