--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="description" content="None">
         
-        <link rel="canonical" href="https://lotek.wildfirelaboratories.com/">
+        <link rel="canonical" href="https://sov.wildfirelaboratories.com/">
         <link rel="shortcut icon" href="img/favicon.ico">
-        <title>LOTEK-DOCS-LSN</title>
+        <title>SOVEREIGN-DOCS-LSN</title>
         <link href="css/bootstrap.min.css" rel="stylesheet">
         <link href="css/font-awesome.min.css" rel="stylesheet">
         <link href="css/base.css" rel="stylesheet">
@@ -24,7 +24,7 @@
     <body class="homepage">
         <div class="navbar fixed-top navbar-expand-lg navbar-dark bg-primary">
             <div class="container">
-                <a class="navbar-brand" href=".">LOTEK-DOCS-LSN</a>
+                <a class="navbar-brand" href=".">SOVEREIGN-DOCS-LSN</a>
                 <!-- Expander button -->
                 <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbar-collapse">
                     <span class="navbar-toggler-icon"></span>
@@ -264,5 +264,5 @@ will be paid by the buyer.</strong></strong></p></div>
 
 <!--
 MkDocs version : 1.3.0
-Build Date UTC : 2022-07-07 19:51:58.056553+00:00
+Build Date UTC : 2022-07-07 19:53:42.652043+00:00
 -->
